[gd_scene load_steps=15 format=3 uid="uid://dno0u05qsjp48"]

[ext_resource type="Theme" uid="uid://1xsms24mcd22" path="res://Resources/Themes/GameTheme.tres" id="1_w21gn"]
[ext_resource type="Script" path="res://Nodes/Terrain/WorldResources/ResourceComponents/resource_hud.gd" id="2_b03eb"]
[ext_resource type="PackedScene" uid="uid://cldfvstlgf1mi" path="res://Nodes/HUD/button_hud.tscn" id="3_b50xq"]
[ext_resource type="Script" path="res://Nodes/Structures/Turrets/TurretComponents/RepairHud/ResourceNeeded.gd" id="4_8152p"]
[ext_resource type="Texture2D" uid="uid://dmgu7w0rsfs7w" path="res://Nodes/HUD/InGameHud/ResourceIcon_.png" id="4_bvvaq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hxd2s"]
light_mode = 1

[sub_resource type="Animation" id="Animation_uuywj"]
resource_name = "HideOff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonHUD:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(39, 15), Vector2(8, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonHUD:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollectProgress:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ResourceNeeded:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bo3km"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonHUD:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(43, 15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonHUD:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollectProgress:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ResourceNeeded:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m5abn"]
resource_name = "ShowUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonHUD:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 8), Vector2(39, 15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonHUD:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtonHUD")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Collect", 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollectProgress:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ResourceNeeded:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqxeu"]
_data = {
"HideOff": SubResource("Animation_uuywj"),
"RESET": SubResource("Animation_bo3km"),
"ShowUp": SubResource("Animation_m5abn")
}

[sub_resource type="Gradient" id="Gradient_yvhqs"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.560784)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j784p"]
gradient = SubResource("Gradient_yvhqs")
width = 70

[sub_resource type="Gradient" id="Gradient_qhmsh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_inyef"]
gradient = SubResource("Gradient_qhmsh")
width = 70

[node name="RepairHud" type="Control" node_paths=PackedStringArray("animation_player", "collect_progress")]
visible = false
material = SubResource("CanvasItemMaterial_hxd2s")
custom_minimum_size = Vector2(32, 22)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 22.0
theme = ExtResource("1_w21gn")
script = ExtResource("2_b03eb")
animation_player = NodePath("AnimationPlayer")
collect_progress = NodePath("CollectProgress")

[node name="Panel" type="Panel" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 47.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
use_parent_material = true
layout_mode = 1
offset_left = 4.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 12.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Repair"
visible_characters = 0
visible_ratio = 0.0

[node name="ButtonHUD" parent="." instance=ExtResource("3_b50xq")]
visible = false
self_modulate = Color(1, 1, 1, 0)
use_parent_material = true
position = Vector2(51, 7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hqxeu")
}
speed_scale = 4.0

[node name="CollectProgress" type="TextureProgressBar" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 16.0
offset_right = 58.0
offset_bottom = 18.0
max_value = 1.0
step = 0.001
value = 0.5
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_j784p")
texture_progress = SubResource("GradientTexture1D_inyef")

[node name="ResourceNeeded" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
use_parent_material = true
anchors_preset = 0
offset_top = -16.0
offset_right = 58.0
offset_bottom = 2.0
script = ExtResource("4_8152p")

[node name="Panel" type="PanelContainer" parent="ResourceNeeded"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourceIcon" type="Sprite2D" parent="ResourceNeeded"]
use_parent_material = true
position = Vector2(9, 8)
texture = ExtResource("4_bvvaq")
offset = Vector2(0, -2)
vframes = 3
frame = 2

[node name="ResourceAmount" type="Label" parent="ResourceNeeded"]
use_parent_material = true
layout_mode = 2
offset_left = 19.0
offset_top = 6.0
offset_right = 57.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "32"
